ébauche validator
