# src/main/java/org/sguesdon/api/jsonvalidator/models/controller/ModelsController.java
@@ -1,6 +1,11 @@
 package org.sguesdon.api.jsonvalidator.models.controller;
 
 import lombok.RequiredArgsConstructor;
+import org.everit.json.schema.Schema;
+import org.everit.json.schema.loader.SchemaLoader;
+import org.json.JSONException;
+import org.json.JSONObject;
+import org.json.JSONTokener;
 import org.sguesdon.api.jsonvalidator.models.domain.entity.ModelDto;
 import org.sguesdon.api.jsonvalidator.models.domain.mapper.ModelMapperImpl;
 import org.sguesdon.api.jsonvalidator.models.repository.ModelRepository;
@@ -27,11 +32,25 @@ public class ModelsController implements ModelsApiDelegate {
     }
 
     public ResponseEntity<Model> createModels(Model model) {
+
+        try {
+            JSONObject jsonSchema = new JSONObject(new JSONTokener(model.getSchema()));
+        } catch (JSONException e) {
+            return ResponseEntity.badRequest().build();
+        }
+
         return ResponseEntity.ok(mapper.fromDto(repo.save(mapper.toDto(model))));
     }
 
     public ResponseEntity<Model> updateModelById(String modelId, Model model) {
         if(this.repo.existsById(modelId)) {
+
+            try {
+                JSONObject jsonSchema = new JSONObject(new JSONTokener(model.getSchema()));
+            } catch (JSONException e) {
+                return ResponseEntity.badRequest().build();
+            }
+
             model.setId(modelId);
             return ResponseEntity.ok(mapper.fromDto(repo.save(mapper.toDto(model))));
         }
@@ -51,5 +70,24 @@ public class ModelsController implements ModelsApiDelegate {
         return modelDtoOptional
             .map(modelDto -> ResponseEntity.ok(mapper.fromDto(modelDto)))
             .orElseGet(() -> ResponseEntity.notFound().build());
+    }
+
+    public ResponseEntity<Void> validateDataWithModel(String modelId, String body) {
+
+        Optional<ModelDto> modelDtoOptional = repo.findById(modelId);
+
+        if(modelDtoOptional.isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
+
+        try {
+            JSONObject jsonSchema = new JSONObject(new JSONTokener(modelDtoOptional.get().getSchema()));
+            JSONObject jsonSubject = new JSONObject(new JSONTokener(body));
+            Schema schema = SchemaLoader.load(jsonSchema);
+            schema.validate(jsonSubject);
+            return ResponseEntity.noContent().build();
+        } catch (JSONException e) {
+            return ResponseEntity.badRequest().build();
+        }
     }
 }
